# FileScanner

./: .gitignore  CMakeLists.txt  README.md
include/: Scanner.h
src/: Scanner.cpp  main.cpp
